--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
 }
 
 dependencies {
+    def camerax_version = "1.3.0-alpha04"
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
@@ -51,7 +52,21 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'ru.alexbykov:nopaginate:0.9.9'
 
-    /*   implementation 'com.github.tripplemac:pdfbox-android-lite:1.8.9.2'*/
+    implementation "androidx.camera:camera-core:${camerax_version}"
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
+    // If you want to additionally use the CameraX Lifecycle library
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    // If you want to additionally use the CameraX VideoCapture library
+    implementation "androidx.camera:camera-video:${camerax_version}"
+    // If you want to additionally use the CameraX View class
+    implementation "androidx.camera:camera-view:${camerax_version}"
+    // If you want to additionally add CameraX ML Kit Vision Integration
+    implementation "androidx.camera:camera-mlkit-vision:${camerax_version}"
+    // If you want to additionally use the CameraX Extensions library
+    implementation "androidx.camera:camera-extensions:${camerax_version}"
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
+    /*implementation 'com.github.tripplemac:pdfbox-android-lite:1.8.9.2'*/
+
 
 
 }
